// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object should fail to parse an object with the value 1`] = `
[
  {
    "code": "invalid_type",
    "path": "a",
  },
]
`;

exports[`object should fail to parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "path": "",
  },
]
`;

exports[`object should not accept arrays 1`] = `
[
  {
    "code": "invalid_type",
    "path": "",
  },
]
`;

exports[`object should not accept null values 1`] = `
[
  {
    "code": "invalid_type",
    "path": "",
  },
]
`;

exports[`object should only consider own properties 1`] = `
[
  {
    "code": "invalid_type",
    "path": "a",
  },
]
`;

exports[`object the path property should work with nested objects 1`] = `
[
  {
    "code": "invalid_type",
    "path": "a.b",
  },
]
`;
